added the routerlink to product details

--- a/src/app/pages/buyer/runner-profile-page/runner-profile-page.component.html
+++ b/src/app/pages/buyer/runner-profile-page/runner-profile-page.component.html
@@ -94,7 +94,7 @@
       <div class="card-body p-2 text-center">
         <h6 class="card-title small">{{product.title}}</h6>
         <p class="m-0">R{{product.price}}</p>
-        <button class="btn btn-sm w-100 text-white custom-btn">View Details</button>
+        <button class="btn btn-sm w-100 text-white custom-btn" routerLink="/productDetails" >View Details</button>
       </div>
     </div>
   </div>
