--- a/src/app/pages/buyer/auth-page/auth-page.component.css
+++ b/src/app/pages/buyer/auth-page/auth-page.component.css
@@ -59,7 +59,7 @@ input::placeholder {
 }
 
 .forgot-password-link:hover {
-  color: var(--seondary-background); /* Hover effect */
+  color: var(--secondary-background); /* Hover effect */
 }
 
 /* Button */
@@ -76,7 +76,7 @@ input::placeholder {
 }
 
 .btn-primary:hover {
-  background-color: var(--seondary-background);
+  background-color: var(--secondary-background);
   transform: translateY(-2px);
   box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.1);
 }
@@ -90,7 +90,7 @@ input::placeholder {
 }
 
 .link:hover {
-  color: var(--seondary-background);
+  color: var(--secondary-background);
 }
 
 /* Media Queries for Responsiveness */
