--- a/src/app/pages/buyer/forgot-password/forgot-password.component.css
+++ b/src/app/pages/buyer/forgot-password/forgot-password.component.css
@@ -59,7 +59,7 @@ input::placeholder {
 }
 
 .btn-primary:hover {
-  background-color: var(--seondary-background);
+  background-color: var(--secondary-background);
   transform: translateY(-2px);
   box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.1);
 }
