--- a/src/app/pages/buyer/register-page/register-page.component.html
+++ b/src/app/pages/buyer/register-page/register-page.component.html
@@ -42,7 +42,7 @@
 
       <label for="fullName" class="form-label">Full Name</label> 
 
-      <input type="text" id="fullName" class="form-control px-3 py-2" placeholder="John Doe" /> 
+      <input type="text" id="fullName" class="form-control px-3 py-2" placeholder="John Doe" required/> 
 
     </div> 
 
@@ -54,7 +54,7 @@
 
       <label for="email" class="form-label">Email</label> 
 
-      <input type="email" id="email" class="form-control px-3 py-2" placeholder="johndoe@gmail.com" /> 
+      <input type="email" id="email" class="form-control px-3 py-2" placeholder="johndoe@gmail.com" required/> 
 
     </div> 
 
@@ -66,7 +66,7 @@
 
       <label for="phoneNumber" class="form-label">Phone Number</label> 
 
-      <input type="text" id="phoneNumber" class="form-control px-3 py-2" placeholder="076 123 4567" /> 
+      <input type="text" id="phoneNumber" class="form-control px-3 py-2" placeholder="076 123 4567" required/> 
 
     </div> 
 
@@ -78,7 +78,7 @@
 
       <label for="password" class="form-label">Password</label> 
 
-      <input type="password" id="password" class="form-control px-3 py-2" placeholder="**************" /> 
+      <input type="password" id="password" class="form-control px-3 py-2" placeholder="**************" required/> 
 
     </div> 
 
@@ -90,7 +90,7 @@
 
       <label for="confirmPassword" class="form-label">Confirm Password</label> 
 
-      <input type="password" id="confirmPassword" class="form-control px-3 py-2" placeholder="**************" /> 
+      <input type="password" id="confirmPassword" class="form-control px-3 py-2" placeholder="**************" required/> 
 
     </div> 
 
