--- a/src/app/pages/runner/order-details-page/order-details-page.component.html
+++ b/src/app/pages/runner/order-details-page/order-details-page.component.html
@@ -1,18 +1,20 @@
 
- <!-- Back Icon and Title (Aligned) -->
+<app-navbar></app-navbar>
+
+
+<div class="row">
+    <div class="col-lg-2 col-md-4 col-sm-12">        
+    </div>
+    <div class="col-lg-10 col-md-8 col-sm-12">
+        <!-- Back Icon and Title (Aligned) -->
  <div class="d-flex align-items-center back-header mt-5" >
     <img routerLink="/buyer-login" class="back-icon" width="37" height="37"
       src="https://img.icons8.com/ios/50/3c5a5d/circled-left-2.png" alt="Back" />
     <h1 class="main-slogan">My Orders</h1>
   </div>
 
-
-  
-
 <!-- tabs.component.html -->
 <div class="container mt-5">
-
-
 
     <!-- Centered div that spans 9 columns -->
     <div class="row justify-content-center">
@@ -222,3 +224,7 @@
     <button type="button" class="btn btnAccept px-4 py-2">Accept All</button>
     <button type="button" class="btn btnReject px-4 py-2 ms-4">Decline All</button>
   </div>
+      </div>
+</div>
+
+
