runner can see in progess orders

--- a/src/app/pages/runner/in-progress/in-progress.component.html
+++ b/src/app/pages/runner/in-progress/in-progress.component.html
@@ -21,14 +21,14 @@
       <div class="item-checkbox">
         <input type="checkbox" [(ngModel)]="item.shipped" />
       </div>
-
     </div>
   </div>
 
   <!-- Order Summary -->
   <div class="order-summary">
-    <div class="summary-row"> <!-- this is going to be a link so you can route to another page -->
-        
+    <div class="summary-row">
+      <!-- this is going to be a link so you can route to another page -->
+
       <span><strong>Order Number</strong></span>
       <span>{{ orderDetails.orderNumber }}</span>
     </div>
