--- a/src/app/pages/buyer/auth-page/auth-page.component.html
+++ b/src/app/pages/buyer/auth-page/auth-page.component.html
@@ -64,7 +64,7 @@
 
     <!-- Call-to-Action Button -->
 
-    <button type="button" class="btn btn-primary w-100 py-3 mb-3">Sign In</button>
+    <button type="button" class="btn btn-primary w-100 py-3 mb-3" routerLink="/runner-list">Sign In</button>
 
 
 
@@ -116,7 +116,7 @@
           <button routerLink="/forgot-password" type="submit" class="btn btn-primary w-100" data-bs-dismiss="modal">
             Confirm Email
           </button>
-          
+
         </form>
 
       </div>
