--- a/src/styles.css
+++ b/src/styles.css
@@ -4,3 +4,18 @@
   --black-text: #0c1415;
   --secondary-background: #707f81;
 }
+body {
+  background-color: var(--white-background);
+  color: var(--black-text);
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+}
+a:hover {
+  color: var(--secondary-background);
+  cursor: pointer;
+}
+a {
+  color: var(--green-buttons-links);
+  cursor: pointer;
+}
